--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> Mimi-Games </title>
 </head>
   <body>
-    <p> hoiiiiii mensen</p>
+       hoiiiiii
+    Ik ben sterre
   </body>
 </html>
